--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@ body {
 	color: #CCCCCC;
 	background: #000000;
 	margin: 0px;
-	overflow-x:hidden;
 }
 * {
 	font: 18px "Courier New", Courier, monospace;
@@ -15,6 +14,9 @@ body {
 #output pre {
 	padding:0px;
 	margin: 0px;
+	white-space: pre-wrap;
+	_white-space: normal;
+	word-wrap: break-all;
 }
 #topbar {
 	overflow: hidden;
@@ -49,7 +51,7 @@ body {
 	border:none;
 	color: #CCCCCC;
 	width:100%;
-	padding: 1px 0px;
+	padding: 1px 40%;
 	margin: 0px;
 }
 #inleft {
@@ -84,6 +86,7 @@ body {
 }
 ::-webkit-scrollbar {
     width: 20px;
+	background: black;
 }
 ::-webkit-scrollbar-track {
 	background: #333;
@@ -110,10 +113,11 @@ body {
 	box-shadow: 0 0 0.5em black;
 }
 #phpeval textarea {
-	height: 80%;
-	width: 100%;
 	background: #555;
 	color: #EEE;
+	border: none;
+	width: 100%;
+	height: 85%;
 }
 #phpeval input {
 	color: #CCC;
